Fix vertical alignment of output in Chrome

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -83,12 +83,12 @@ input[type=range]
 
 			&.has-output
 				display: inline-block
+				vertical-align: middle;
 				width: calc(100% - ( #{$slider-output-width + 1.2rem } ))
 				+ output
 					display: inline-block
-					position: relative
 					margin-left: .75rem
-					top: -.75rem
+					vertical-align: middle;
 
 			&.has-output-tooltip
 				display: block
